--- a/MATE/index.html
+++ b/MATE/index.html
@@ -25,7 +25,7 @@
         <br>
     </div>
 
-    <div id="chatbox" class="card w-50 mx-auto" style="display: none;">
+    <div id="chatbox" class="card w-50 mx-auto" style="background: #ffc; , display: none;">
         <div class="card-body ">
 
             Preparando el Mate, espere...
